scrollbar on chat fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body {
 /*overflow: scroll;*/
 #chat {
 	overflow-y: scroll;
+	height: 120px;
 }
 
 .footerCollapsed {
